--- a/100section/class-24/style.css
+++ b/100section/class-24/style.css
@@ -118,7 +118,7 @@ img {
     width: auto !important;
 }
 .slide-content {
-    padding: 225px 0 150px 15px;
+    padding: 225px 0 150px;
 }
 .single-slide-item .row {
     position: relative;
