--- a/100section/class-70/style.css
+++ b/100section/class-70/style.css
@@ -152,7 +152,7 @@ img {
     background-color: #ddd;
     text-transform: uppercase;
     font-weight: 400;
-    color: #333;
+    color: #eee;
     font-size: 17px;
     display: inline-block;
     padding: 15px 50px;
@@ -162,8 +162,8 @@ img {
     z-index: 2;
     transition: .3s;
 }
-.boxed-btn:hover {
-    color: #555;
+.boxed-btn:hover,.boxed-btn:active,.boxed-btn:focus {
+    color: #ccc;
 }
 .boxed-btn:after {
     position: absolute;
@@ -176,4 +176,26 @@ img {
     opacity: .5;
     z-index: -2;
     border-radius: 50px;
+}
+
+/* modal css */
+.custom-modal .modal-dialog {
+    width: 900px;
+    padding-left: 150px;
+    padding-top: 50px;
+}
+.custom-modal .modal-content {
+    background-color: #ddd;
+    color: #00008b;
+    padding: 30px;
+    text-align: justify;
+    border-radius: 0;
+}
+.custom-modal .modal-header {
+    padding: 15px 20px;
+    border-bottom: 1px solid #00008b;
+}
+.custom-modal .close {
+    color: #00008b;
+    opacity: 1;
 }
