--- a/100section/class-84/style.css
+++ b/100section/class-84/style.css
@@ -17,36 +17,68 @@ body {
 
 }
 a:hover { text-decoration: none }
+.single-fliper .fliper, .single-fliper .front, .single-fliper .back {
+    height: 300px;
+}
+
+
+
+.single-fliper {
+    -webkit-perspective: 1000;
+    perspective: 1000;
+    margin: 15px 0;
+}
+.fliper .front,.fliper .back {
+    display: table;
+    font-size: 80px;
+    width: 100%;
+}
+
+.fliper .front-inner, .fliper .back-inner {
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+}
+
+body {
+    background: #EFEFEF;
+}
 .section-padding {
     padding: 80px 0;
 }
-
-.section-titile {
-    text-align: center;
-    font-size: 17px;
-    margin-bottom: 80px;
+.fliper .front {
+    background: #fff;
+    border-bottom: 3px solid #282828;
+        z-index: 2;
 }
 
-.section-titile h2 {
-    font-weight: 600;
+
+
+.fliper .front h3, .fliper .back h3 {
+    font-weight: 300;
 }
 
-.single-progressbar {
-    text-align: center;
+.fliper .back {
+    background: #282828;
+    color: #fff;
+    transform: rotateY(-180deg);
 }
 
-span.progress-bar-percentage {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    left: 0;
-    line-height: 40px;
-    margin-top: -20px;
-    font-weight: 700;
-    font-size: 45px;
-}
-
-.single-progressbar div {
+.single-fliper .fliper {
     position: relative;
-    margin-bottom: 28px;
+    transition: 0.6s;
+    transform-style: preserve-3d;
+}
+
+.fliper .front, .fliper .back {
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden;
+}
+
+
+
+.single-fliper:hover .fliper {
+    transform: rotateY(-180deg);
 }
